--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </a>
         <nav>
             <a href="index.html">Студiя</a>
-            <a href="Portfolio.html">Портфолiо</a>
+            <a href="portfolio.html">Портфолiо</a>
             <a href="#">Контакти</a>
         </nav>
         <div>
