--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -16,16 +17,16 @@
             <a href="#">Контакти</a>
         </nav>
         <div>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com" class="email1">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="number1">+38 096 111 11 11</a>
         </div>
     </header>
     <main>
-        <section>
+        <section class="section1">
             <h1>Еффективнi рiшення для вашого бiзнесу</h1>
-            <button type="submit">Замовити послугу</button>
+            <button type="submit" class="button1">Замовити послугу</button>
         </section>
-        <section>
+        <section class="section2">
                 <ul>
                     <li>
                         <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -45,7 +46,7 @@
                     </li>
                 </ul>
         </section>
-        <section>
+        <section class="section3">
             <h2>Чим ми займаємося</h2>
             <div>
                 <img src="img/box1.jpg" alt="">
@@ -53,7 +54,7 @@
                 <img src="img/box3.png" alt="">
             </div>
         </section>
-        <section>
+        <section class="section4">
             <h2>Наша команда</h2>
             <div>
                 <figure>
@@ -84,80 +85,6 @@
                         <p>UI Designer</p>
                 </figcaption>
                 </figure>
-            </div>
-        </section>
-        <section>
-            <div>
-                <a href="All">Усi</a>
-                <a href="Website">Веб-сайти</a>
-                <a href="Apps">Додатки</a>
-                <a href="Design">Дизайн</a>
-                <a href="Marketing">Маркетинг</a>
-            </div>
-            <div>
-            <figure>
-                <img src="img/img.png" alt="">
-                <figcaption>
-                    <h4>Технокряк</h4>
-                    <p>Веб-сайт</p>
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="img/img1.png" alt="">
-                <figcaption>
-                    <h4>Постер New Orlean vs Golden Star</h4>
-                    <p>Дизайн</p>
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="img/img2.png" alt="">
-                <figcaption>
-                    <h4>Ресторан Seafood</h4>
-                    <p>Додаток</p>
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="img/img3.png" alt="">
-                <figcaption>
-                    <h4>Проєкт Prime</h4>
-                    <p>Маркетинг</p>
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="img/img4.png" alt="">
-                <figcaption>
-                    <h4>Проєкт Boxes</h4>
-                    <p>Додаток</p>
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="img/img5.png" alt="">
-                <figcaption>
-                    <h4>Inspiration has no Borders</h4>
-                    <p>Веб-сайт</p>
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="img/img6.png" alt="">
-                <figcaption>
-                    <h4>Видання Limited Edition</h4>
-                    <p>Дизайн</p>
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="img/img7.png" alt="">
-                <figcaption>
-                    <h4>Проєкт LAB</h4>
-                    <p>Маркетинг</p>
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="img/img8.png" alt="">
-                <figcaption>
-                    <h4>Growing Business</h4>
-                    <p>Додаток</p>
-                </figcaption>
-            </figure>
             </div>
         </section>
     </main>
