--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -12,70 +13,70 @@
     <main>
     <section>
         <div>
-            <a href="All">Усi</a>
-            <a href="Website">Веб-сайти</a>
-            <a href="Apps">Додатки</a>
-            <a href="Design">Дизайн</a>
-            <a href="Marketing">Маркетинг</a>
+            <button type="button" class="a1portf">Усi</button>
+            <button type="button" class="a2portf">Веб-сайти</button>
+            <button type="button" class="a3portf">Додатки</button>
+            <button type="button" class="a4portf">Дизайн</button>
+            <button type="button" class="a5portf">Маркетинг</button>
         </div>
         <div>
-        <figure>
+        <figure class="fig0">
             <img src="img/img.png" alt="">
             <figcaption>
                 <h4>Технокряк</h4>
                 <p>Веб-сайт</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure class="fig1">
             <img src="img/img1.png" alt="">
             <figcaption>
                 <h4>Постер New Orlean vs Golden Star</h4>
                 <p>Дизайн</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure class="fig2">
             <img src="img/img2.png" alt="">
             <figcaption>
                 <h4>Ресторан Seafood</h4>
                 <p>Додаток</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure class="fig3">
             <img src="img/img3.png" alt="">
             <figcaption>
                 <h4>Проєкт Prime</h4>
                 <p>Маркетинг</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure class="fig4">
             <img src="img/img4.png" alt="">
             <figcaption>
                 <h4>Проєкт Boxes</h4>
                 <p>Додаток</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure class="fig5">
             <img src="img/img5.png" alt="">
             <figcaption>
                 <h4>Inspiration has no Borders</h4>
                 <p>Веб-сайт</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure class="fig6">
             <img src="img/img6.png" alt="">
             <figcaption>
                 <h4>Видання Limited Edition</h4>
                 <p>Дизайн</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure class="fig7">
             <img src="img/img7.png" alt="">
             <figcaption>
                 <h4>Проєкт LAB</h4>
                 <p>Маркетинг</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure class="fig8">
             <img src="img/img8.png" alt="">
             <figcaption>
                 <h4>Growing Business</h4>
