--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="#">
             <img src="img/WebStudio.png" alt="logo">
         </a>
-        <nav>
+        <nav class="navigation">
             <a href="index.html">Студiя</a>
             <a href="portfolio.html">Портфолiо</a>
             <a href="#">Контакти</a>
