--- a/portfolio.html
+++ b/portfolio.html
@@ -10,77 +10,77 @@
     <header>
 
     </header>
-    <main>
-    <section>
-        <div>
-            <button type="button" class="a1portf">Усi</button>
-            <button type="button" class="a2portf">Веб-сайти</button>
-            <button type="button" class="a3portf">Додатки</button>
-            <button type="button" class="a4portf">Дизайн</button>
-            <button type="button" class="a5portf">Маркетинг</button>
+    <main class="mainportfolio">
+    <section class="portfolio">
+        <div class="portfolio-nav">
+            <button type="button" class="portfolio-button">Усi</button>
+            <button type="button" class="portfolio-button">Веб-сайти</button>
+            <button type="button" class="portfolio-button">Додатки</button>
+            <button type="button" class="portfolio-button">Дизайн</button>
+            <button type="button" class="portfolio-button">Маркетинг</button>
         </div>
-        <div>
-        <figure class="fig0">
-            <img src="img/img.png" alt="">
-            <figcaption>
-                <h4>Технокряк</h4>
-                <p>Веб-сайт</p>
+        <div class="choose">
+        <figure class="choose-figure">
+            <img class="choose-img" src="img/img.png" alt="">
+            <figcaption class="choose-figcap">
+                <h4 class="choose-h4">Технокряк</h4>
+                <p class="choose-p">Веб-сайт</p>
             </figcaption>
         </figure>
-        <figure class="fig1">
-            <img src="img/img1.png" alt="">
-            <figcaption>
-                <h4>Постер New Orlean vs Golden Star</h4>
-                <p>Дизайн</p>
+        <figure class="choose-figure">
+            <img class="choose-img" src="img/img1.png" alt="">
+            <figcaption class="choose-figcap" class="choose-h4">
+                <h4 class="choose-h4">Постер New Orlean vs Golden Star</h4>
+                <p class="choose-p">Дизайн</p>
             </figcaption>
         </figure>
-        <figure class="fig2">
-            <img src="img/img2.png" alt="">
-            <figcaption>
-                <h4>Ресторан Seafood</h4>
-                <p>Додаток</p>
+        <figure class="choose-figure">
+            <img class="choose-img" src="img/img2.png" alt="">
+            <figcaption class="choose-figcap">
+                <h4 class="choose-h4">Ресторан Seafood</h4>
+                <p class="choose-p">Додаток</p>
             </figcaption>
         </figure>
-        <figure class="fig3">
-            <img src="img/img3.png" alt="">
-            <figcaption>
-                <h4>Проєкт Prime</h4>
-                <p>Маркетинг</p>
+        <figure class="choose-figure">
+            <img class="choose-img" src="img/img3.png" alt="">
+            <figcaption class="choose-figcap">
+                <h4 class="choose-h4">Проєкт Prime</h4>
+                <p class="choose-p">Маркетинг</p>
             </figcaption>
         </figure>
-        <figure class="fig4">
-            <img src="img/img4.png" alt="">
-            <figcaption>
-                <h4>Проєкт Boxes</h4>
-                <p>Додаток</p>
+        <figure class="choose-figure">
+            <img class="choose-img" src="img/img4.png" alt="">
+            <figcaption class="choose-figcap">
+                <h4 class="choose-h4">Проєкт Boxes</h4>
+                <p class="choose-p">Додаток</p>
             </figcaption>
         </figure>
-        <figure class="fig5">
-            <img src="img/img5.png" alt="">
-            <figcaption>
-                <h4>Inspiration has no Borders</h4>
-                <p>Веб-сайт</p>
+        <figure class="choose-figure">
+            <img class="choose-img" src="img/img5.png" alt="">
+            <figcaption class="choose-figcap">
+                <h4 class="choose-h4">Inspiration has no Borders</h4>
+                <p class="choose-p">Веб-сайт</p>
             </figcaption>
         </figure>
-        <figure class="fig6">
-            <img src="img/img6.png" alt="">
-            <figcaption>
-                <h4>Видання Limited Edition</h4>
-                <p>Дизайн</p>
+        <figure class="choose-figure">
+            <img class="choose-img" src="img/img6.png" alt="">
+            <figcaption class="choose-figcap">
+                <h4 class="choose-h4">Видання Limited Edition</h4>
+                <p class="choose-p">Дизайн</p>
             </figcaption>
         </figure>
-        <figure class="fig7">
-            <img src="img/img7.png" alt="">
-            <figcaption>
-                <h4>Проєкт LAB</h4>
-                <p>Маркетинг</p>
+        <figure class="choose-figure">
+            <img class="choose-img" src="img/img7.png" alt="">
+            <figcaption class="choose-figcap">
+                <h4 class="choose-h4">Проєкт LAB</h4>
+                <p class="choose-p">Маркетинг</p>
             </figcaption>
         </figure>
-        <figure class="fig8">
-            <img src="img/img8.png" alt="">
-            <figcaption>
-                <h4>Growing Business</h4>
-                <p>Додаток</p>
+        <figure class="choose-figure">
+            <img class="choose-img" src="img/img8.png" alt="">
+            <figcaption class="choose-figcap">
+                <h4 class="choose-h4">Growing Business</h4>
+                <p class="choose-p">Додаток</p>
             </figcaption>
         </figure>
         </div>
