--- a/index.html
+++ b/index.html
@@ -7,92 +7,92 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <a href="#">
-            <img src="img/WebStudio.png" alt="logo">
+    <header class="maininfo">
+        <a class="maininfo-logo" href="#">
+            <img class="maininfo-img" src="img/WebStudio.png" alt="logo">
         </a>
-        <nav class="navigation">
-            <a href="index.html">Студiя</a>
-            <a href="portfolio.html">Портфолiо</a>
-            <a href="#">Контакти</a>
+        <nav class="maininfo-navigation">
+            <a class="maininfo-navigation-link" href="index.html">Студiя</a>
+            <a class="maininfo-navigation-link" href="portfolio.html">Портфолiо</a>
+            <a class="maininfo-navigation-link" href="#">Контакти</a>
         </nav>
-        <div>
-            <a href="mailto:info@devstudio.com" class="email1">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="number1">+38 096 111 11 11</a>
+        <div class="maininfo-info">
+            <a class="maininfo-mail" href="mailto:info@devstudio.com" class="email1">info@devstudio.com</a>
+            <a class="maininfo-tel" href="tel:+380961111111" class="number1">+38 096 111 11 11</a>
         </div>
     </header>
-    <main>
-        <section class="section1">
-            <h1>Еффективнi рiшення для вашого бiзнесу</h1>
-            <button type="submit" class="button1">Замовити послугу</button>
+    <main class="mainstore">
+        <section class="mainstore-services">
+            <h1 class="mainstore-h1">Еффективнi рiшення для вашого бiзнесу</h1>
+            <button class="mainstore-button" type="submit" class="button1">Замовити послугу</button>
         </section>
-        <section class="section2">
-                <ul>
-                    <li>
-                        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+        <section class="advantages">
+                <ul class="advantages-list">
+                    <li class="advantages-list-h">
+                        <h3 class="advantages-list-h3">УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <p class="advantages-list-p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
-                    <li>
-                        <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <li class="advantages-list-h">
+                        <h3 class="advantages-list-h3">ПУНКТУАЛЬНІСТЬ</h3>
+                        <p class="advantages-list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li>
-                        <h3>ПЛАНУВАННЯ</h3>
-                        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <li class="advantages-list-h">
+                        <h3 class="advantages-list-h3">ПЛАНУВАННЯ</h3>
+                        <p class="advantages-list-p">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li>
-                        <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <li class="advantages-list-h">
+                        <h3 class="advantages-list-h3">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <p class="advantages-list-p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
                 </ul>
         </section>
-        <section class="section3">
-            <h2>Чим ми займаємося</h2>
-            <div>
-                <img src="img/box1.jpg" alt="">
-                <img src="img/box2.png" alt="">
-                <img src="img/box3.png" alt="">
+        <section class="work">
+            <h2 class="work-doing">Чим ми займаємося</h2>
+            <div class="work-img">
+                <img class="work-shows" src="img/box1.jpg" alt="">
+                <img class="work-shows" src="img/box2.png" alt="">
+                <img class="work-shows" src="img/box3.png" alt="">
             </div>
         </section>
-        <section class="section4">
-            <h2>Наша команда</h2>
-            <div>
-                <figure>
-                    <img src="img/img.jpg" alt="">
-                    <figcaption>
-                        <h4>Ігор Дем'яненко</h4>
-                        <p>Product Designer</p>
+        <section class="team">
+            <h2 class="team-main">Наша команда</h2>
+            <div class="team-list">
+                <figure class="team-practicants">
+                    <img class="team-practicants-img" src="img/img.jpg" alt="">
+                    <figcaption class="team-practicants-text">
+                        <h4 class="team-practicants-h4">Ігор Дем'яненко</h4>
+                        <p class="team-practicants-p">Product Designer</p>
                     </figcaption>
                 </figure>
-                <figure>
-                    <img src="img/img(1).jpg" alt="">
-                    <figcaption>
-                        <h4>Ольга Рєпіна</h4>
-                        <p>Frontend Developer</p>
+                <figure class="team-practicants">
+                    <img class="team-practicants-img" src="img/img(1).jpg" alt="">
+                    <figcaption class="team-practicants-text">
+                        <h4 class="team-practicants-h4">Ольга Рєпіна</h4>
+                        <p class="team-practicants-p">Frontend Developer</p>
                     </figcaption>
                 </figure>
-                <figure>
-                    <img src="img/img(2).jpg" alt="">
-                    <figcaption>
-                        <h4>Микола Тарасов</h4>
-                        <p>Marketing</p>
+                <figure class="team-practicants">
+                    <img class="team-practicants-img" src="img/img(2).jpg" alt="">
+                    <figcaption class="team-practicants-text">
+                        <h4 class="team-practicants-h4">Микола Тарасов</h4>
+                        <p class="team-practicants-p">Marketing</p>
                     </figcaption>
                 </figure>
-                <figure>
-                    <img src="img/img(3).jpg" alt="">
-                    <figcaption>
-                        <h4>Михайло Єрмаков</h4>
-                        <p>UI Designer</p>
+                <figure class="team-practicants">
+                    <img class="team-practicants-img" src="img/img(3).jpg" alt="">
+                    <figcaption class="team-practicants-text">
+                        <h4 class="team-practicants-h4">Михайло Єрмаков</h4>
+                        <p class="team-practicants-p">UI Designer</p> class="team-practicants-h4"
                 </figcaption>
                 </figure>
             </div>
         </section>
     </main>
-    <footer>
-        <img src="img/WebStudio.png" alt="">
-        <address>м. Київ, пр-т Лесі Українки, 26</address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <footer class="footer">
+        <img class="footer-img" src="img/WebStudio.png" alt="">
+        <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+        <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
     </footer>
 </body>
 </html>
