--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
                     <img class="team-practicants-img" src="img/img(3).jpg" alt="">
                     <figcaption class="team-practicants-text">
                         <h4 class="team-practicants-h4">Михайло Єрмаков</h4>
-                        <p class="team-practicants-p">UI Designer</p> class="team-practicants-h4"
+                        <p class="team-practicants-p">UI Designer</p>
                 </figcaption>
                 </figure>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <img class="footer-img" src="img/WebStudio.png" alt="">
+        <img class="footer-img" src="img/WebStudio (1).png" alt="">
         <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
         <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
