--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-
+    <header class="maininfo">
+        <a class="maininfo-logo" href="#">
+            <img class="maininfo-img" src="img/WebStudio.png" alt="logo">
+        </a>
+        <nav class="maininfo-navigation">
+            <a class="maininfo-navigation-link" href="index.html">Студiя</a>
+            <a class="maininfo-navigation-link" href="portfolio.html">Портфолiо</a>
+            <a class="maininfo-navigation-link" href="#">Контакти</a>
+        </nav>
+        <div class="maininfo-info">
+            <a class="maininfo-mail" href="mailto:info@devstudio.com" class="email1">info@devstudio.com</a>
+            <a class="maininfo-tel" href="tel:+380961111111" class="number1">+38 096 111 11 11</a>
+        </div>
     </header>
     <main class="mainportfolio">
     <section class="portfolio">
@@ -86,8 +97,11 @@
         </div>
     </section>
     </main>
-    <footer>
-        
+    <footer class="footer">
+        <img class="footer-img" src="img/WebStudio (1).png" alt="">
+        <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+        <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
     </footer>
 </body>
 </html>
