--- a/index.html
+++ b/index.html
@@ -1,98 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="maininfo">
-        <a class="maininfo-logo" href="#">
-            <img class="maininfo-img" src="img/WebStudio.png" alt="logo">
-        </a>
-        <nav class="maininfo-navigation">
-            <a class="maininfo-navigation-link" href="index.html">Студiя</a>
-            <a class="maininfo-navigation-link" href="portfolio.html">Портфолiо</a>
-            <a class="maininfo-navigation-link" href="#">Контакти</a>
-        </nav>
-        <div class="maininfo-info">
-            <a class="maininfo-mail" href="mailto:info@devstudio.com" class="email1">info@devstudio.com</a>
-            <a class="maininfo-tel" href="tel:+380961111111" class="number1">+38 096 111 11 11</a>
+        <div class="container">
+            <a class="maininfo-logo" href="#">
+                <img class="maininfo-img" src="img/WebStudio.png" alt="logo">
+            </a>
+            <nav class="maininfo-navigation">
+                <a class="maininfo-navigation-link" href="index.html">Студiя</a>
+                <a class="maininfo-navigation-link" href="portfolio.html">Портфолiо</a>
+                <a class="maininfo-navigation-link" href="#">Контакти</a>
+            </nav>
+            <div class="maininfo-info">
+                <a class="maininfo-mail" href="mailto:info@devstudio.com" class="email1">info@devstudio.com</a>
+                <a class="maininfo-tel" href="tel:+380961111111" class="number1">+38 096 111 11 11</a>
+            </div>
         </div>
     </header>
     <main class="mainstore">
         <section class="mainstore-services">
-            <h1 class="mainstore-h1">Еффективнi рiшення для вашого бiзнесу</h1>
-            <button class="mainstore-button" type="submit" class="button1">Замовити послугу</button>
+            <div class="container">
+                <h1 class="mainstore-h1">Еффективнi рiшення для вашого бiзнесу</h1>
+                <button class="mainstore-button" type="submit" class="button1">Замовити послугу</button>
+            </div>
         </section>
         <section class="advantages">
+            <div class="container">
                 <ul class="advantages-list">
-                    <li class="advantages-list-h">
+                    <article class="advantages-list-h">
                         <h3 class="advantages-list-h3">УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p class="advantages-list-p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                    </li>
-                    <li class="advantages-list-h">
+                        <p class="advantages-list-p">Ідейні міркування, і навіть початок повсякденної роботи з
+                            формування
+                            позиції.</p>
+                    </article>
+                    <article class="advantages-list-h">
                         <h3 class="advantages-list-h3">ПУНКТУАЛЬНІСТЬ</h3>
-                        <p class="advantages-list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                    </li>
-                    <li class="advantages-list-h">
+                        <p class="advantages-list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне
+                            у
+                            себе.</p>
+                    </article>
+                    <article class="advantages-list-h">
                         <h3 class="advantages-list-h3">ПЛАНУВАННЯ</h3>
                         <p class="advantages-list-p">Так само консультація з широким активом значною мірою зумовлює.</p>
-                    </li>
-                    <li class="advantages-list-h">
+                    </article>
+                    <article class="advantages-list-h">
                         <h3 class="advantages-list-h3">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p class="advantages-list-p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                    </li>
+                        <p class="advantages-list-p">Значимість цих проблем настільки очевидна, що реалізація планових
+                            завдань.</p>
+                    </article>
                 </ul>
+            </div>
         </section>
         <section class="work">
-            <h2 class="work-doing">Чим ми займаємося</h2>
-            <div class="work-img">
-                <img class="work-shows" src="img/box1.jpg" alt="">
-                <img class="work-shows" src="img/box2.png" alt="">
-                <img class="work-shows" src="img/box3.png" alt="">
+            <div class="container">
+                <h2 class="work-doing">Чим ми займаємося</h2>
+                <div class="work-img">
+                    <img class="work-shows" src="img/box1.jpg" alt="">
+                    <img class="work-shows" src="img/box2.png" alt="">
+                    <img class="work-shows" src="img/box3.png" alt="">
+                </div>
             </div>
         </section>
         <section class="team">
-            <h2 class="team-main">Наша команда</h2>
-            <div class="team-list">
-                <figure class="team-practicants">
-                    <img class="team-practicants-img" src="img/img.jpg" alt="">
-                    <figcaption class="team-practicants-text">
-                        <h4 class="team-practicants-h4">Ігор Дем'яненко</h4>
-                        <p class="team-practicants-p">Product Designer</p>
-                    </figcaption>
-                </figure>
-                <figure class="team-practicants">
-                    <img class="team-practicants-img" src="img/img(1).jpg" alt="">
-                    <figcaption class="team-practicants-text">
-                        <h4 class="team-practicants-h4">Ольга Рєпіна</h4>
-                        <p class="team-practicants-p">Frontend Developer</p>
-                    </figcaption>
-                </figure>
-                <figure class="team-practicants">
-                    <img class="team-practicants-img" src="img/img(2).jpg" alt="">
-                    <figcaption class="team-practicants-text">
-                        <h4 class="team-practicants-h4">Микола Тарасов</h4>
-                        <p class="team-practicants-p">Marketing</p>
-                    </figcaption>
-                </figure>
-                <figure class="team-practicants">
-                    <img class="team-practicants-img" src="img/img(3).jpg" alt="">
-                    <figcaption class="team-practicants-text">
-                        <h4 class="team-practicants-h4">Михайло Єрмаков</h4>
-                        <p class="team-practicants-p">UI Designer</p>
-                </figcaption>
-                </figure>
+            <div class="container">
+                <h2 class="team-main">Наша команда</h2>
+                <div class="team-list">
+                    <figure class="team-practicants">
+                        <img class="team-practicants-img" src="img/img.jpg" alt="">
+                        <figcaption class="team-practicants-text">
+                            <h4 class="team-practicants-h4">Ігор Дем'яненко</h4>
+                            <p class="team-practicants-p">Product Designer</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="team-practicants">
+                        <img class="team-practicants-img" src="img/img(1).jpg" alt="">
+                        <figcaption class="team-practicants-text">
+                            <h4 class="team-practicants-h4">Ольга Рєпіна</h4>
+                            <p class="team-practicants-p">Frontend Developer</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="team-practicants">
+                        <img class="team-practicants-img" src="img/img(2).jpg" alt="">
+                        <figcaption class="team-practicants-text">
+                            <h4 class="team-practicants-h4">Микола Тарасов</h4>
+                            <p class="team-practicants-p">Marketing</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="team-practicants">
+                        <img class="team-practicants-img" src="img/img(3).jpg" alt="">
+                        <figcaption class="team-practicants-text">
+                            <h4 class="team-practicants-h4">Михайло Єрмаков</h4>
+                            <p class="team-practicants-p">UI Designer</p>
+                        </figcaption>
+                    </figure>
+                </div>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <img class="footer-img" src="img/WebStudio (1).png" alt="">
-        <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
-        <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+        <div class="container">
+            <img class="footer-img" src="img/WebStudio (1).png" alt="">
+            <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+            <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+        </div>
     </footer>
 </body>
+
 </html>
