--- a/portfolio.html
+++ b/portfolio.html
@@ -1,107 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="maininfo">
-        <a class="maininfo-logo" href="#">
-            <img class="maininfo-img" src="img/WebStudio.png" alt="logo">
-        </a>
-        <nav class="maininfo-navigation">
-            <a class="maininfo-navigation-link" href="index.html">Студiя</a>
-            <a class="maininfo-navigation-link" href="portfolio.html">Портфолiо</a>
-            <a class="maininfo-navigation-link" href="#">Контакти</a>
-        </nav>
-        <div class="maininfo-info">
-            <a class="maininfo-mail" href="mailto:info@devstudio.com" class="email1">info@devstudio.com</a>
-            <a class="maininfo-tel" href="tel:+380961111111" class="number1">+38 096 111 11 11</a>
+        <div class="container">
+            <a class="maininfo-logo" href="#">
+                <img class="maininfo-img" src="img/WebStudio.png" alt="logo">
+            </a>
+            <nav class="maininfo-navigation">
+                <a class="maininfo-navigation-link" href="index.html">Студiя</a>
+                <a class="maininfo-navigation-link" href="portfolio.html">Портфолiо</a>
+                <a class="maininfo-navigation-link" href="#">Контакти</a>
+            </nav>
+            <div class="maininfo-info">
+                <a class="maininfo-mail" href="mailto:info@devstudio.com" class="email1">info@devstudio.com</a>
+                <a class="maininfo-tel" href="tel:+380961111111" class="number1">+38 096 111 11 11</a>
+            </div>
         </div>
     </header>
     <main class="mainportfolio">
-    <section class="portfolio">
-        <div class="portfolio-nav">
-            <button type="button" class="portfolio-button">Усi</button>
-            <button type="button" class="portfolio-button">Веб-сайти</button>
-            <button type="button" class="portfolio-button">Додатки</button>
-            <button type="button" class="portfolio-button">Дизайн</button>
-            <button type="button" class="portfolio-button">Маркетинг</button>
-        </div>
-        <div class="choose">
-        <figure class="choose-figure">
-            <img class="choose-img" src="img/img.png" alt="">
-            <figcaption class="choose-figcap">
-                <h4 class="choose-h4">Технокряк</h4>
-                <p class="choose-p">Веб-сайт</p>
-            </figcaption>
-        </figure>
-        <figure class="choose-figure">
-            <img class="choose-img" src="img/img1.png" alt="">
-            <figcaption class="choose-figcap" class="choose-h4">
-                <h4 class="choose-h4">Постер New Orlean vs Golden Star</h4>
-                <p class="choose-p">Дизайн</p>
-            </figcaption>
-        </figure>
-        <figure class="choose-figure">
-            <img class="choose-img" src="img/img2.png" alt="">
-            <figcaption class="choose-figcap">
-                <h4 class="choose-h4">Ресторан Seafood</h4>
-                <p class="choose-p">Додаток</p>
-            </figcaption>
-        </figure>
-        <figure class="choose-figure">
-            <img class="choose-img" src="img/img3.png" alt="">
-            <figcaption class="choose-figcap">
-                <h4 class="choose-h4">Проєкт Prime</h4>
-                <p class="choose-p">Маркетинг</p>
-            </figcaption>
-        </figure>
-        <figure class="choose-figure">
-            <img class="choose-img" src="img/img4.png" alt="">
-            <figcaption class="choose-figcap">
-                <h4 class="choose-h4">Проєкт Boxes</h4>
-                <p class="choose-p">Додаток</p>
-            </figcaption>
-        </figure>
-        <figure class="choose-figure">
-            <img class="choose-img" src="img/img5.png" alt="">
-            <figcaption class="choose-figcap">
-                <h4 class="choose-h4">Inspiration has no Borders</h4>
-                <p class="choose-p">Веб-сайт</p>
-            </figcaption>
-        </figure>
-        <figure class="choose-figure">
-            <img class="choose-img" src="img/img6.png" alt="">
-            <figcaption class="choose-figcap">
-                <h4 class="choose-h4">Видання Limited Edition</h4>
-                <p class="choose-p">Дизайн</p>
-            </figcaption>
-        </figure>
-        <figure class="choose-figure">
-            <img class="choose-img" src="img/img7.png" alt="">
-            <figcaption class="choose-figcap">
-                <h4 class="choose-h4">Проєкт LAB</h4>
-                <p class="choose-p">Маркетинг</p>
-            </figcaption>
-        </figure>
-        <figure class="choose-figure">
-            <img class="choose-img" src="img/img8.png" alt="">
-            <figcaption class="choose-figcap">
-                <h4 class="choose-h4">Growing Business</h4>
-                <p class="choose-p">Додаток</p>
-            </figcaption>
-        </figure>
-        </div>
-    </section>
+        <section class="portfolio">
+            <div class="container">
+                <div class="portfolio-nav">
+                    <button type="button" class="portfolio-button">Усi</button>
+                    <button type="button" class="portfolio-button">Веб-сайти</button>
+                    <button type="button" class="portfolio-button">Додатки</button>
+                    <button type="button" class="portfolio-button">Дизайн</button>
+                    <button type="button" class="portfolio-button">Маркетинг</button>
+                </div>
+            </div>
+            <div class="choose">
+                <div class="container">
+                    <figure class="choose-figure">
+                        <img class="choose-img" src="img/img.png" alt="">
+                        <figcaption class="choose-figcap">
+                            <h4 class="choose-h4">Технокряк</h4>
+                            <p class="choose-p">Веб-сайт</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="choose-figure">
+                        <img class="choose-img" src="img/img1.png" alt="">
+                        <figcaption class="choose-figcap" class="choose-h4">
+                            <h4 class="choose-h4">Постер New Orlean vs Golden Star</h4>
+                            <p class="choose-p">Дизайн</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="choose-figure">
+                        <img class="choose-img" src="img/img2.png" alt="">
+                        <figcaption class="choose-figcap">
+                            <h4 class="choose-h4">Ресторан Seafood</h4>
+                            <p class="choose-p">Додаток</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="choose-figure">
+                        <img class="choose-img" src="img/img3.png" alt="">
+                        <figcaption class="choose-figcap">
+                            <h4 class="choose-h4">Проєкт Prime</h4>
+                            <p class="choose-p">Маркетинг</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="choose-figure">
+                        <img class="choose-img" src="img/img4.png" alt="">
+                        <figcaption class="choose-figcap">
+                            <h4 class="choose-h4">Проєкт Boxes</h4>
+                            <p class="choose-p">Додаток</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="choose-figure">
+                        <img class="choose-img" src="img/img5.png" alt="">
+                        <figcaption class="choose-figcap">
+                            <h4 class="choose-h4">Inspiration has no Borders</h4>
+                            <p class="choose-p">Веб-сайт</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="choose-figure">
+                        <img class="choose-img" src="img/img6.png" alt="">
+                        <figcaption class="choose-figcap">
+                            <h4 class="choose-h4">Видання Limited Edition</h4>
+                            <p class="choose-p">Дизайн</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="choose-figure">
+                        <img class="choose-img" src="img/img7.png" alt="">
+                        <figcaption class="choose-figcap">
+                            <h4 class="choose-h4">Проєкт LAB</h4>
+                            <p class="choose-p">Маркетинг</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="choose-figure">
+                        <img class="choose-img" src="img/img8.png" alt="">
+                        <figcaption class="choose-figcap">
+                            <h4 class="choose-h4">Growing Business</h4>
+                            <p class="choose-p">Додаток</p>
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
-        <img class="footer-img" src="img/WebStudio (1).png" alt="">
-        <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
-        <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+        <div class="container">
+            <img class="footer-img" src="img/WebStudio (1).png" alt="">
+            <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+            <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+        </div>
     </footer>
 </body>
+
 </html>
