--- a/portfolio.html
+++ b/portfolio.html
@@ -29,11 +29,11 @@
         <section class="portfolio">
             <div class="container">
                 <div class="portfolio-nav">
-                    <button type="button" class="portfolio-button">Усi</button>
-                    <button type="button" class="portfolio-button">Веб-сайти</button>
-                    <button type="button" class="portfolio-button">Додатки</button>
-                    <button type="button" class="portfolio-button">Дизайн</button>
-                    <button type="button" class="portfolio-button">Маркетинг</button>
+                    <a href="#" type="button" class="portfolio-button">Усi</a>
+                    <a href="#" type="button" class="portfolio-button">Веб-сайти</a>
+                    <a href="#" type="button" class="portfolio-button">Додатки</a>
+                    <a href="#" type="button" class="portfolio-button">Дизайн</a>
+                    <a href="#" type="button" class="portfolio-button">Маркетинг</a>
                 </div>
             </div>
             <div class="choose">
