--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <a class="maininfo-navigation-link" href="#">Контакти</a>
             </nav>
             <div class="maininfo-info">
-                <a class="maininfo-mail" href="mailto:info@devstudio.com" class="email1">info@devstudio.com</a>
-                <a class="maininfo-tel" href="tel:+380961111111" class="number1">+38 096 111 11 11</a>
+                <a class="maininfo-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="maininfo-tel" href="tel:+380961111111">+38 096 111 11 11</a>
             </div>
         </div>
     </header>
@@ -106,7 +106,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-con">
             <img class="footer-img" src="img/WebStudio (1).png" alt="">
             <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
             <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
