--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="maininfo">
+    <header class="maininfo portf-head">
         <div class="container">
             <a class="maininfo-logo" href="#">
                 <img class="maininfo-img" src="img/WebStudio.png" alt="logo">
