--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </section>
         <section class="work">
-            <div class="container">
+            <div class="container work-con">
                 <h2 class="work-doing">Чим ми займаємося</h2>
                 <div class="work-img">
                     <img class="work-shows" src="img/box1.jpg" alt="">
