--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="choose">
-                <div class="container">
+                <div class="container portfolio-con">
                     <figure class="choose-figure">
                         <img class="choose-img" src="img/img.png" alt="">
                         <figcaption class="choose-figcap">
@@ -106,7 +106,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-con">
             <img class="footer-img" src="img/WebStudio (1).png" alt="">
             <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
             <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
