--- a/index.html
+++ b/index.html
@@ -35,23 +35,21 @@
         <section class="advantages">
             <div class="container">
                 <ul class="advantages-list">
-                    <article class="advantages-list-h">
+                    <article class="advantages-list-h first">
                         <h3 class="advantages-list-h3">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="advantages-list-p">Ідейні міркування, і навіть початок повсякденної роботи з
                             формування
                             позиції.</p>
                     </article>
-                    <article class="advantages-list-h">
+                    <article class="advantages-list-h second">
                         <h3 class="advantages-list-h3">ПУНКТУАЛЬНІСТЬ</h3>
-                        <p class="advantages-list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне
-                            у
-                            себе.</p>
+                        <p class="advantages-list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </article>
-                    <article class="advantages-list-h">
+                    <article class="advantages-list-h third">
                         <h3 class="advantages-list-h3">ПЛАНУВАННЯ</h3>
                         <p class="advantages-list-p">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </article>
-                    <article class="advantages-list-h">
+                    <article class="advantages-list-h fourth">
                         <h3 class="advantages-list-h3">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p class="advantages-list-p">Значимість цих проблем настільки очевидна, що реалізація планових
                             завдань.</p>
