--- a/index.html
+++ b/index.html
@@ -36,20 +36,24 @@
             <div class="container">
                 <ul class="advantages-list">
                     <article class="advantages-list-h first">
+                        <img  class="advantages-img" src="img/Group 1 (3).png" alt="">
                         <h3 class="advantages-list-h3">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="advantages-list-p">Ідейні міркування, і навіть початок повсякденної роботи з
                             формування
                             позиції.</p>
                     </article>
                     <article class="advantages-list-h second">
+                        <img  class="advantages-img" src="img/Group 2 (3).png" alt="">
                         <h3 class="advantages-list-h3">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="advantages-list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </article>
                     <article class="advantages-list-h third">
+                        <img  class="advantages-img" src="img/Group 3 (3).png" alt="">
                         <h3 class="advantages-list-h3">ПЛАНУВАННЯ</h3>
                         <p class="advantages-list-p">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </article>
                     <article class="advantages-list-h fourth">
+                        <img  class="advantages-img" src="img/Group 4 (1).png" alt="">
                         <h3 class="advantages-list-h3">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p class="advantages-list-p">Значимість цих проблем настільки очевидна, що реалізація планових
                             завдань.</p>
