--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <main class="mainstore">
         <section class="mainstore-services">
-            <div class="container">
+            <div class="container container-mainstore">
                 <h1 class="mainstore-h1">Еффективнi рiшення для вашого бiзнесу</h1>
                 <button class="mainstore-button" type="submit" class="button1">Замовити послугу</button>
             </div>
